# gizigo

./: .gitignore  LICENSE  Makefile  README.md
.sisyphus/run-continuation/: ses_1bed1a346ffe5ozShQ2Illm72F.json
apps/web/: .env.production  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
apps/web/src/: App.tsx  index.css
apps/web/src/components/: Footer.tsx  HouseholdForm.tsx  InfeasibilityPanel.tsx  MethodsModal.tsx  PlanCard.tsx  RecipeDrawer.tsx  SensitivityBar.tsx
apps/web/src/copy/: id.ts
data/: MANIFEST.md  cooking-method.yaml  substitutes.yaml  validation-report.json
data/akg/: permenkes-28-2019.json
data/normalized/: food_groups.json  ingredients.json
data/prices/: aceh.yaml  banten.yaml  dki_jakarta.yaml  jawa_barat.yaml  jawa_tengah.yaml  jawa_timur.yaml  kalimantan_barat.yaml  maluku.yaml  national_baseline.yaml  nusa_tenggara_barat.yaml  nusa_tenggara_timur.yaml  papua.yaml  sulawesi_barat.yaml  sulawesi_selatan.yaml  sumatera_utara.yaml  yogyakarta.yaml
data/raw/panganku/: _index.html  _meta.json
docs/: data-sources.md  demo-script.md  devpost-submission.md  ilp-formulation.md
openspec/changes/gizigo-meal-optimizer/: design.md  proposal.md  tasks.md
scripts/: db-init.sql  deploy.sh  docker-postgres.sh  gizigo-api.service  nginx-gizigo.conf
services/api/: .env.example  README.md  pyproject.toml
services/api/scripts/: normalize_panganku.py  scrape_panganku.py  smoke_optimizer.py
services/api/src/: config.py  data.py  humanizer.py  main.py  models.py  optimizer.py
services/api/tests/: test_optimizer.py
(+9 files in other folders)
